# buh-manager

./: .gitignore  .pre-commit-config.yaml  README.md  bookkeeper_service_spec.md  docker-compose.yml  rules.md  rules_front.md  stats.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  coverage.json  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_user_id_to_receipts.py  b023617c4b7a_initial.py  c0ce34e1d510_add_classifier_rules.py  c4f7a2b9e3d1_add_api_keys.py  d1e2f3a4b5c6_add_inn_kpp_to_counterparties.py  d5e8f1a2b3c4_add_inn_kpp_to_counterparties.py  e6f9g2h3i4j5_add_user_id_to_audit_log.py  e995f32038a8_add_range_fields_to_classifier_rules.py  f7a8b9c0d1e2_make_counterparty_inn_unique.py  g8h9i0j1k2l3_make_transaction_receipt_id_unique.py  h9i0j1k2l3m4_per_user_file_hash_and_indexes.py  i0j1k2l3m4n5_unique_receipt_document_id.py  j1k2l3m4n5o6_add_payload_to_counterparties_and_documents.py  k2l3m4n5o6p7_add_description_to_expense_types.py  l3m4n5o6p7q8_scope_reference_data_per_user.py  m4n5o6p7q8r9_add_description_to_expense_types.py  n5o6p7q8r9s0_drop_tx_counterparty_require_expense_type.py  o6p7q8r9s0t1_receipt_fiscal_uniqueness.py  o6p7q8r9s0t1_rescope_legacy_reference_ids.py  p7q8r9s0t1u2_add_zero_balance_to_accounts.py  q8r9s0t1u2v3_add_app_constants_table.py
backend/app/: config.py  constants.py  database.py  main.py
backend/app/db/: accounts.py  api_keys.py  app_constants.py  audit.py  balances.py  classifier_rules.py  counterparties.py  documents.py  exchange_rates.py  expense_types.py  receipts.py  reconciliation_reports.py  transactions.py  users.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  account.py  api_key.py  app_constant.py  audit_log.py  balance.py  classifier_rule.py  counterparty.py  document.py  exchange_rate.py  expense_type.py  receipt.py  user.py  (+3 more)
backend/storage/: __init__.py  base.py  local.py  yandex_s3.py
backend/tests/: conftest.py
(+152 files in other folders)
