[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buh-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "pydantic-settings>=2.3.0",
    "boto3>=1.34.0",
    "rapidfuzz>=3.9.0",
    "authlib>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "itsdangerous>=2.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "coverage[toml]>=7.5.0",
    "anyio[trio]>=4.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "storage*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "ARG",      # flake8-unused-arguments
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
    "RUF",      # ruff-specific
]
ignore = [
    "B008",  # FastAPI Depends() in function defaults
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["app", "storage"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = [
    "sqlmodel.*",
    "jose.*",
    "authlib.*",
    "boto3.*",
    "botocore.*",
    "rapidfuzz.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app", "storage"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
